# Gama

./: .gitignore  README.md  pyproject.toml  requirements.txt
gama/: ai_analyzer.py  docker_check.py  docker_runner.py  evidence.py  hashing.py  history.py  installer.py  ioc.py  main.py  mitre_mapper.py  monitor.py  pdf_reporter.py  pipeline.py  pyproject.toml  reporter.py  risk.py  scanner.py  source_detector.py  static_scan.py  universal_fetcher.py  yara_scanner.py
