[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gama"
version = "1.0.0"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0"
]

[project.scripts]
gama = "gama.main:app"

[tool.setuptools]
packages = ["gama"]