[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gama-zero-trust"
version = "1.0.0"
description = "Zero-Trust CLI for secure software installation using Docker sandboxing"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "docker",
    "psutil",
    "requests",
    "reportlab",
    "yara-python"
]

[project.scripts]
gama = "gama.main:app"

[tool.setuptools]
packages = ["gama"]